force-app/main/default/objects/ssot__ManagedEventSession__dlm/fields/ssot__ManagedEventId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManagedEventId__c</fullName>
    <label>Managed Event Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManagedEventId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>