force-app/main/default/objects/ssot__ManagedEventSession__dlm/fields/ssot__ManagedSessionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManagedSessionNumber__c</fullName>
    <label>Managed Session Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManagedSessionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>