force-app/main/default/objects/ssot__ManagedEventSession__dlm/fields/ssot__SessionMode__c.field-meta.xml
<CustomField>
    <fullName>ssot__SessionMode__c</fullName>
    <label>Mode</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SessionMode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>