force-app/main/default/objects/ssot__ManagedEventSession__dlm/fields/ssot__TopicAssignmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TopicAssignmentId__c</fullName>
    <label>TopicAssignment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TopicAssignmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>