force-app/main/default/objects/ssot__ManagedEventSession__dlm/fields/ssot__UniqueSessionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueSessionNumber__c</fullName>
    <label>Unique Session Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueSessionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>